docs(ffi): WP2, findings for rust, csharp and java keep facts and drop container timings and verdicts
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PheycaLyXA4a9kMxTWJgZC